src/test/ui/async-await/issue-64130-3-other.stderr
error[E0277]: the trait bound `Foo: Qux` is not satisfied in `impl std::future::Future`
  --> $DIR/issue-64130-3-other.rs:24:5
   |
LL | fn is_qux<T: Qux>(t: T) { }
   |              --- required by this bound in `is_qux`
LL | 
LL | async fn bar() {
   |                - within this `impl std::future::Future`
...
LL |     is_qux(bar());
   |     ^^^^^^ within `impl std::future::Future`, the trait `Qux` is not implemented for `Foo`
   |
   = help: the following implementations were found:
             <Foo as Qux>
note: future does not implement `Qux` as this value is used across an await
  --> $DIR/issue-64130-3-other.rs:18:5
   |
LL |     let x = Foo;
   |         - has type `Foo`
LL |     baz().await;
   |     ^^^^^^^^^^^ await occurs here, with `x` maybe used later
LL | }
   | - `x` is later dropped here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
